WebCore/rendering/RenderListItem.h
@@ -45,6 +45,7 @@ public:
     bool notInList() const { return m_notInList; }
 
     const String& markerText() const;
+    String markerTextWithSuffix() const;
 
     void updateListMarkerNumbers();
 
