WebCore/rendering/RenderListMarker.h
@@ -41,6 +41,7 @@ public:
     virtual void computePreferredLogicalWidths();
 
     const String& text() const { return m_text; }
+    String suffix() const;
 
     bool isInside() const;
 
